// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Skeleton should be defined. 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  pointer-events: none;
  background: #E7E7E7;
  -webkit-animation: fLEqvv 2s ease-in-out infinite;
  animation: fLEqvv 2s ease-in-out infinite;
}

.c0.c0 * {
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0 anchor-skeleton"
  display="inline-block"
/>
`;

exports[`Component: Skeleton should display just the children when not loading 1`] = `
<div>
  show me!
</div>
`;

exports[`Component: Skeleton should render in textOnly mode when given only text 1`] = `
.c0 {
  box-sizing: border-box;
  display: inherit;
  word-break: break-all;
  color: #E7E7E7;
  -webkit-animation: gXgMws 2s ease-in-out infinite;
  animation: gXgMws 2s ease-in-out infinite;
}

<div
  className="c0 anchor-skeleton"
  display="inherit"
>
  ▆▆▆▆▆▆▆▆▆▆▆▆
</div>
`;

exports[`Component: Skeleton should support multiple color schemes 1`] = `
.c0 {
  box-sizing: border-box;
  display: inherit;
  word-break: break-all;
  color: #0074A6;
  -webkit-animation: gVOVAL 2s ease-in-out infinite;
  animation: gVOVAL 2s ease-in-out infinite;
}

.c1 {
  box-sizing: border-box;
  display: inherit;
  word-break: break-all;
  color: #268068;
  -webkit-animation: gsfEtd 2s ease-in-out infinite;
  animation: gsfEtd 2s ease-in-out infinite;
}

<div>
  <div
    className="c0 anchor-skeleton"
    display="inherit"
  >
    ▆▆▆
  </div>
  <div
    className="c0 anchor-skeleton"
    display="inherit"
  >
    ▆▆▆
  </div>
  <div
    className="c1 anchor-skeleton"
    display="inherit"
  >
    ▆▆▆
  </div>
</div>
`;

exports[`Component: Skeleton should wrap over nontext children and hide them 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  pointer-events: none;
  background: #E7E7E7;
  -webkit-animation: fLEqvv 2s ease-in-out infinite;
  animation: fLEqvv 2s ease-in-out infinite;
}

.c0.c0 * {
  visibility: hidden;
  opacity: 0;
}

<div
  className="c0 anchor-skeleton"
  display="inline-block"
>
  <div>
    hide me!
  </div>
</div>
`;
